--- a/PythonLLM.ipynb
+++ b/PythonLLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM2rwpALF//sXFiZw7ELKY8",
+      "authorship_tag": "ABX9TyOGsJoyjnKxrpc/MLOR5V4q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +43,47 @@
       "metadata": {
         "id": "3xEfa47Z8G1t"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_list = [1,2,3,4,5]\n",
+        "transform_x = lambda x : x**3 if(x%2 == 0) else x**2\n",
+        "\n",
+        "for i in num_list:\n",
+        "  print(transform_x(i))\n",
+        "  # print((lambda x : x**3 if(x%2 == 0) else x**2)(i))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g21nzh-lB0l_",
+        "outputId": "77dd1807-fb7a-46aa-ea60-e191821ec4e0"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "8\n",
+            "9\n",
+            "64\n",
+            "25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jXOQilGCCAUk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
